--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -52,6 +52,7 @@ jobs:
         with:
           name: windows-build-artifact
           path: bin
+          compression-level: 9
       - name: Create Package - Mosa.Tools.Package
         run: nuget pack Source\Mosa.Packages\Mosa.Tools.Package.nuspec -Tool -OutputDirectory bin\nupkg -Version ${{ env.BUILD_VERSION }}
       - name: Create Package - Mosa.Tools.Package.Qemu
@@ -73,7 +74,7 @@ jobs:
           path: bin\nupkg
 
   windows-build-packaging:
-    name: Windows Build Packaging
+    name: Build Windows Packaging
     needs: [windows-build, linux-build, macos-build, windows-unit-testing, linux-unit-testing, macos-unit-testing, windows-demo-testing, linux-demo-testing, macos-demo-testing]
     runs-on: windows-latest
     timeout-minutes: 15
@@ -139,7 +140,8 @@ jobs:
         with:
           name: linux-build-artifact
           path: bin
-         
+          compression-level: 9
+       
   macos-build:
     name: MacOS Build
     runs-on: macos-13
@@ -168,6 +170,7 @@ jobs:
         with:
           name: macos-build-artifact
           path: bin
+          compression-level: 9
 
   windows-unit-testing:
     strategy:
@@ -191,12 +194,13 @@ jobs:
       - name: Make Artifact Folder
         run: mkdir artifact
       - name: Unit Test
-        run: bin\Mosa.Utility.UnitTests.exe -check -o${{ matrix.optimization }} -counters artifact\windows-counters-unittests-o${{ matrix.optimization }}.txt
+        run: bin\Mosa.Utility.UnitTests.exe -check -o${{ matrix.optimization }} -counters artifact\counters-windows-unittests-o${{ matrix.optimization }}.txt
       - name: Store Counter Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: windows-counters-unittests-o${{ matrix.optimization }}
+          name: counters-windows-unittests-o${{ matrix.optimization }}
           path: artifact
+          retention-days: 2
 
   linux-unit-testing:
     strategy:
@@ -228,12 +232,13 @@ jobs:
       - name: Make Artifact Folder
         run: mkdir artifact
       - name: Perform Unit Testing
-        run: dotnet bin/Mosa.Utility.UnitTests.dll -check -o${{ matrix.optimization }} -counters artifact/linux-counters-unittests-o${{ matrix.optimization }}.txt
+        run: dotnet bin/Mosa.Utility.UnitTests.dll -check -o${{ matrix.optimization }} -counters artifact/counters-linux-unittests-o${{ matrix.optimization }}.txt
       - name: Store Counter Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: linux-counters-unittests-o${{ matrix.optimization }}
+          name: counters-linux-unittests-o${{ matrix.optimization }}
           path: artifact
+          retention-days: 2
           
   macos-unit-testing:
     strategy:
@@ -263,12 +268,13 @@ jobs:
       - name: Make Artifact Folder
         run: mkdir artifact
       - name: Unit Test 
-        run: dotnet bin/Mosa.Utility.UnitTests.dll -check -o${{ matrix.optimization }} -counters artifact/macos-counters-unittests-o${{ matrix.optimization }}.txt
+        run: dotnet bin/Mosa.Utility.UnitTests.dll -check -o${{ matrix.optimization }} -counters artifact/counters-macos-unittests-o${{ matrix.optimization }}.txt
       - name: Store Counter Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: macos-counters-unittests-o${{ matrix.optimization }}
+          name: counters-macos-unittests-o${{ matrix.optimization }}
           path: artifact
+          retention-days: 2
 
   windows-demo-testing:
     strategy:
@@ -447,3 +453,17 @@ jobs:
         run: dotnet bin/Mosa.Tool.Launcher.Console.dll bin/Mosa.BareMetal.HelloWorld.ARM32.dll -arm32 -o8 -check -autolaunch-off -output-counters
       - name: ARM32 Compile Test - BareMetal HelloWorld - o9
         run: dotnet bin/Mosa.Tool.Launcher.Console.dll bin/Mosa.BareMetal.HelloWorld.ARM32.dll -arm32 -o9 -check -autolaunch-off -output-counters
+
+  merge-artifacts:
+     name: Merge Artifacts
+     runs-on: ubuntu-latest
+     needs: [windows-unit-testing, linux-unit-testing, macos-unit-testing]
+     timeout-minutes: 15
+     steps:
+      - name: Merge Artifacts
+        uses: actions/upload-artifact/merge@v4
+        with:
+            name: counters-unit-tests
+            pattern: counters-*
+            compression-level: 9
+
