Add missing files + disable warnings in project
Signed-off-by: AnErrupTion <anerruption@disroot.org>

--- a/Source/Mosa.TinyCoreLib/Mosa.TinyCoreLib.csproj
+++ b/Source/Mosa.TinyCoreLib/Mosa.TinyCoreLib.csproj
@@ -7,6 +7,7 @@
         <!-- <AssemblyName>System.Runtime</AssemblyName> -->
         <RootNamespace />
 		<AssemblyVersion>8.0.0.0</AssemblyVersion>
+		<WarningLevel>0</WarningLevel>
     </PropertyGroup>
 
 </Project>
