--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -300,9 +300,9 @@ jobs:
       - name: Demo Test - BareMetal TestWorld
         run: bin\Mosa.Tool.Launcher.Console.exe bin\Mosa.BareMetal.TestWorld.x86.dll -o${{ matrix.optimization }} -check -test -output-counters
       - name: Demo Test - BareMetal Console CoolWorld
-        run: bin\Mosa.Tool.Launcher.Console.dll bin\Mosa.BareMetal.CoolWorld.x86.dll -o${{ matrix.optimization }} -check -test -output-counters -bootoptions coolworldui=consolemode,bootoptions=serialdebug
+        run: bin\Mosa.Tool.Launcher.Console.exe bin\Mosa.BareMetal.CoolWorld.x86.dll -o${{ matrix.optimization }} -check -test -output-counters -bootoptions coolworldui=consolemode,bootoptions=serialdebug
       - name: Demo Test - BareMetal Graphical CoolWorld
-        run: bin\Mosa.Tool.Launcher.Console.dll bin\Mosa.BareMetal.CoolWorld.x86.dll -o${{ matrix.optimization }} -check -test -output-counters -vmware-svga -include bin\Include
+        run: bin\Mosa.Tool.Launcher.Console.exe bin\Mosa.BareMetal.CoolWorld.x86.dll -o${{ matrix.optimization }} -check -test -output-counters -vmware-svga -include bin\Include
 
   linux-demo-testing:
     strategy:
