--- a/Source/Mosa.Tool.Explorer.Avalonia/Mosa.Tool.Explorer.Avalonia.csproj
+++ b/Source/Mosa.Tool.Explorer.Avalonia/Mosa.Tool.Explorer.Avalonia.csproj
@@ -19,10 +19,9 @@
 	</ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Avalonia" Version="11.1.0-beta2" />
-        <PackageReference Include="Avalonia.Desktop" Version="11.1.0-beta2" />
-        <PackageReference Include="Avalonia.Themes.Fluent" Version="11.1.0-beta2" />
-        <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.1.0-beta2" />
+        <PackageReference Include="Avalonia.Desktop" Version="11.1.3" />
+		<PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.1.3" />
+        <PackageReference Include="Avalonia.Themes.Fluent" Version="11.1.3" />
     </ItemGroup>
 
 </Project>
